--- a/public/index.html
+++ b/public/index.html
@@ -5,39 +5,37 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo_for_apple.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+    <!-- Google's verification code-->
+    <meta name="google-site-verification" content="8--I0WEhyMB4K1wVUud3yu2bufrvjfXyJH06G9jTtks" />
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>Fasin - Machine Learning Engineer</title>
+    <!-- SEO Meta Tags -->
+    <title>Fasin - AI / ML Engineer</title>
+    <meta name="description" content="fasinfasi portfolio website — AI Engineer, Machine Learning Engineer, ML Engineer, showcasing projects in AI, NLP, and data science." />
+    <meta name="keywords" content="fasinfasi, fasinfasi portfolio, Fasin, machine learning, AI, data science, NLP, deep learning, self-taught learner" />
+    <meta name="author" content="FasinFasi" />
+
+    <!-- Open Graph for social media previews -->
+    <meta property="og:title" content="FasinFasi | AI / ML Engineer" />
+    <meta property="og:description" content="fasinfasi portfolio website — Machine Learning Engineer, AI Engineer, AI / ML Engineer, showcasing projects in AI, NLP, and data science." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://fasinfasi.github.io/" />
+    <meta property="og:image" content="%PUBLIC_URL%/portfolio_preview.jpg" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="fasinfasi | AI / ML Engineer" />
+    <meta name="twitter:description" content="fasinfasi portfolio website — AI Engineer, Machine Learning Engineer, ML Engineer, showcasing projects in AI, NLP, and data science." />
+    <meta name="twitter:image" content="%PUBLIC_URL%/portfolio_preview.jpg" />
+
+    <!-- Apple Touch Icon -->
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo_for_apple_ios.png" />
+
+    <!-- Manifest -->
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   </head>
+
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
