--- a/public/index.html
+++ b/public/index.html
@@ -5,18 +5,20 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta property="og:site_name" content="FasinFasi Portfolio" />
+
     <!-- Google's verification code-->
     <meta name="google-site-verification" content="8--I0WEhyMB4K1wVUud3yu2bufrvjfXyJH06G9jTtks" />
 
     <!-- SEO Meta Tags -->
     <title>Fasin - AI / ML Engineer</title>
-    <meta name="description" content="fasinfasi portfolio website — AI Engineer, Machine Learning Engineer, ML Engineer, showcasing projects in AI, NLP, and data science." />
-    <meta name="keywords" content="fasinfasi, fasinfasi portfolio, Fasin, machine learning, AI, data science, NLP, deep learning, self-taught learner" />
-    <meta name="author" content="FasinFasi" />
+    <meta name="description" content="Fasin Fasi is an AI / Machine Learning Engineer specializing in deep learning, NLP, and data-driven solutions. Experienced in building end-to-end AI systems and delivering real-world ML applications." />
+    <meta name="keywords" content="Fasin, fasin, fasi, fasinfasi, fasinfasin, fasin fasin, fasin fasi, fasi fasi, fasin ts, fasin t s, fasints, fasinfasi portfolio, machine learning, AI, data science, NLP, deep learning, self-taught learner, AI experts" />
+    <meta name="author" content="FasinFasi, Fasin, Fasi, Fasin Fasi, Fasin Fasin" />
 
     <!-- Open Graph for social media previews -->
     <meta property="og:title" content="FasinFasi | AI / ML Engineer" />
-    <meta property="og:description" content="fasinfasi portfolio website — Machine Learning Engineer, AI Engineer, AI / ML Engineer, showcasing projects in AI, NLP, and data science." />
+    <meta property="og:description" content="Fasin is an AI / Machine Learning Engineer specializing in deep learning, NLP, and data-driven solutions. Experienced in building end-to-end AI systems and delivering real-world ML applications." />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://fasinfasi.github.io/" />
     <meta property="og:image" content="%PUBLIC_URL%/portfolio_preview.jpg" />
@@ -24,14 +26,17 @@
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="fasinfasi | AI / ML Engineer" />
-    <meta name="twitter:description" content="fasinfasi portfolio website — AI Engineer, Machine Learning Engineer, ML Engineer, showcasing projects in AI, NLP, and data science." />
+    <meta name="twitter:description" content="Fasin is an AI / Machine Learning Engineer specializing in deep learning, NLP, and data-driven solutions. Experienced in building end-to-end AI systems and delivering real-world ML applications." />
     <meta name="twitter:image" content="%PUBLIC_URL%/portfolio_preview.jpg" />
+
+    <link rel="me" href="https://www.instagram.com/fasin.fasi/" />
 
     <!-- Apple Touch Icon -->
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo_for_apple_ios.png" />
 
     <!-- Manifest -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
   </head>
 
   <body>
